--- a/eventapp/templates/eventapp/event_list.html
+++ b/eventapp/templates/eventapp/event_list.html
@@ -6,7 +6,7 @@
   <ul>
     {% for event in event_list %}
       <li>
-        <a href="">{{ event.title }}</a>
+        <a href="{{ event.get_absolute_url }}">{{ event.title }}</a>
       </li>
     {% endfor %}
   </ul>
