create form for entering new event

--- a/eventapp/templates/base_generic.html
+++ b/eventapp/templates/base_generic.html
@@ -17,6 +17,7 @@
         <ul class="sidebar-nav">
           <li><a href="{% url 'eventindex' %}">Home</a></li>
           <li><a href="{% url 'list-of-events' %}">All Events</a></li>
+          <li><a href="{% url 'new_event' %}">Add New Event</a></li>
         </ul>
      {% endblock %}
       </div>
