filter using hosts

--- a/eventapp/templates/base_generic.html
+++ b/eventapp/templates/base_generic.html
@@ -18,6 +18,7 @@
           <li><a href="{% url 'eventindex' %}">Home</a></li>
           <li><a href="{% url 'list-of-events' %}">All Events</a></li>
           <li><a href="{% url 'new_event' %}">Add New Event</a></li>
+          <li><a href="{% url 'all-hosts' %}">All Hosts</a></li>
         </ul>
      {% endblock %}
       </div>
