--- a/eventapp/templates/eventapp/event_list.html
+++ b/eventapp/templates/eventapp/event_list.html
@@ -3,14 +3,16 @@
 {% block content %}
   <h1>Event List</h1>
   {% if event_list %}
-<table style="width:15%">
+<table style="width:50%">
       <tr>
         <th>Event Title</th>
+        <th>Update Event</th>
         <th>Remove </th>
       </tr>
     {% for event in event_list %}
       <tr>
-        <td><a href="{{ event.get_absolute_url }}" class="eventbutton">{{ event.title }}</a></td>
+        <td><a href="{{ event.get_absolute_url }}" class="event">{{ event.title }}</a></td>
+        <td><a href="{% url 'update_event' event.pk %}" class="update">Modify</a></td>
         <td><a href="{% url 'delete_event' event.pk %}" class="button">Delete</a></td>
       </tr>
     {% endfor %}
