add created and modified in evet detail

--- a/eventapp/templates/eventapp/event_detail.html
+++ b/eventapp/templates/eventapp/event_detail.html
@@ -15,4 +15,6 @@
     </li>
     {% endfor %}
 </ul>
+<p><strong>Created :</strong>{{ event.created }}</p>
+<p><strong>Modified :</strong>{{ event.modified }}</p>
 {% endblock %}
