--- a/eventapp/templates/base_generic.html
+++ b/eventapp/templates/base_generic.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  {% block title %}<title>EventApp</title>{% endblock %}
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <!-- Add additional CSS in static file -->
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>
-<body>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-2">
-      {% block sidebar %}
-        <ul class="sidebar-nav">
-          <li><a href="{% url 'eventindex' %}">Home</a></li>
-          <li><a href="{% url 'list-of-events' %}">All Events</a></li>
-          <li><a href="{% url 'new_event' %}">Add New Event</a></li>
-          <li><a href="{% url 'all-hosts' %}">All Hosts</a></li>
-        </ul>
-     {% endblock %}
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    {% block x %}<title>Event</title>{% endblock %}  
+  </head>
+  <body>
+    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">EventsApp</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'eventindex' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'list-of-events' %}">Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'new_event' %}">Add Event</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'all-hosts' %}">Hosts</a>
+            </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'list-of-places' %}">All Places</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'all-cities' %}">All Cities</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'place_new' %}">Add place</a>
+          </li>
+          </ul>
+        </div>
       </div>
-      <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
-    </div>
-  </div>
-</body>
-</html>
+    </nav>
+
+    {% block content %}{% endblock %}
