--- a/eventapp/templates/eventapp/event_list.html
+++ b/eventapp/templates/eventapp/event_list.html
@@ -1,15 +1,22 @@
 {% extends "base_generic.html" %}
-
+{% load bootstrap %}
+{% block x %}<title>All Events</title>{% endblock %}
 {% block content %}
-  <h1>Event List</h1>
-  {% if event_list %}
+<div class="container">
+  <form method="GET">
+    {{filter.form}}
+    <button type="submit" class="btn btn-primary">Search</button>
+  </form>
+</div>
+<div class="container">
+  {% if filter.qs %}
 <table style="width:50%">
       <tr>
         <th>Event Title</th>
         <th>Update Event</th>
         <th>Remove </th>
       </tr>
-    {% for event in event_list %}
+    {% for event in filter.qs %}
       <tr>
         <td><a href="{{ event.get_absolute_url }}" class="event">{{ event.title }}</a></td>
         <td><a href="{% url 'update_event' event.pk %}" class="update">Modify</a></td>
@@ -19,5 +26,6 @@
 </table>
   {% else %}
     <p>There are no Events.</p>
-  {% endif %} 
+  {% endif %}
+</div>
 {% endblock %}
