--- a/eventapp/templates/base_generic.html
+++ b/eventapp/templates/base_generic.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    {% block x %}<title>Event</title>{% endblock %}  
+    {% block title %}<title>Event</title>{% endblock %}  
   </head>
   <body>
     
@@ -15,7 +15,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul c lass="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'eventindex' %}">Home</a>
             </li>
