--- a/eventapp/templates/eventapp/event_edit.html
+++ b/eventapp/templates/eventapp/event_edit.html
@@ -1,8 +1,10 @@
+{% extends "base_generic.html" %}
 {% block content %}
     <h2>New Event</h2>
     <form method = 'POST'>
         {% csrf_token %}
         {{ form.as_p }}
+        {{eventtime_formset.as_p}}
         <button type="submit">Add</button>
     </form>
 {% endblock %}
