--- a/placesapp/templates/placesapp/place_edit.html
+++ b/placesapp/templates/placesapp/place_edit.html
@@ -1,3 +1,14 @@
+{% extends "base_generic.html" %}
+
+{% load leaflet_tags %}
+
+{% block title %}
+
+{% leaflet_js plugins="forms" %}
+{% leaflet_css plugins="forms" %}
+
+{% endblock %}
+
 {% block content %}
     <h2>New Place</h2>
     <form method = 'POST'>
