--- a/eventapp/templates/base_generic.html
+++ b/eventapp/templates/base_generic.html
@@ -15,9 +15,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul c lass="navbar-nav">
+          <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'eventindex' %}">Home</a>
+              <a class="nav-link" aria-current="page" href="{% url 'eventindex' %}">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'list-of-events' %}">Events</a>
@@ -26,17 +26,20 @@
               <a class="nav-link" href="{% url 'new_event' %}">Add Event</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'all-hosts' %}">Hosts</a>
+              <a class="nav-link" href="{% url 'list-of-places' %}">All Places</a>
             </li>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'list-of-places' %}">All Places</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'all-cities' %}">All Cities</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'place_new' %}">Add place</a>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'all-cities' %}">All Cities</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'place_new' %}">Add place</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'filter' %}">filter</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'all-hosts' %}">About us</a>
+            </li>
           </li>
           </ul>
         </div>
